# sem1-2019-wdi

./: CMakeLists.txt
inne/: calc.cpp  conv.cpp  cycling_list.cpp  det.cpp  factors.cpp  fib.cpp  obfuscated_max.c  quine.cpp  sort.cpp  std_madness.cpp
kolokwia/: 14.15.1.a.1.cpp  14.15.1.a.2.cpp  14.15.1.b.1.cpp  14.15.1.b.2.cpp  15.16.2.1.cpp  15.16.2.2.cpp  16.17.1.a.1.cpp  16.17.1.a.2.cpp  16.17.2.a.1.cpp  16.17.2.a.2.cpp  16.17.2.b.1.cpp  16.17.2.b.2.cpp  16.17.3.a.1.cpp  17.18.1.a.1.cpp  17.18.1.a.2.cpp  p16.17.1.cpp  p16.17.2.cpp  p17.18.1.cpp  p17.18.2.cpp  p17.18.3.cpp
zestaw1/: 1.cpp  2.cpp  3.cpp  4.cpp  6.cpp
zestaw10/: 17.cpp  18.cpp  19.cpp  20.cpp  28.cpp  3.cpp  30.cpp  4.cpp  5.cpp
zestaw2/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
zestaw3/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
zestaw4/: 1.cpp
zestaw5/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  5_tablica_booli.cpp  ulamki.hpp
zestaw6/: 1.cpp  3.cpp  4.cpp
zestaw7/: 14.cpp  5.cpp  6.cpp  7.cpp  8.cpp
zestaw9/: 1.cpp  2.cpp
