cmake_minimum_required(VERSION 3.14)
project(wdi)

set(CMAKE_CXX_STANDARD 14)

add_executable(1.1 zestaw1/1.cpp)
add_executable(1.2 zestaw1/2.cpp)
add_executable(1.3 zestaw1/3.cpp)
add_executable(1.4 zestaw1/4.cpp)
add_executable(1.5 zestaw1/5.cpp)
add_executable(1.6 zestaw1/6.cpp)

add_executable(2.1 zestaw2/1.cpp)
add_executable(2.2 zestaw2/2.cpp)
add_executable(2.3 zestaw2/3.cpp)
add_executable(2.4 zestaw2/4.cpp)
