cmake_minimum_required(VERSION 3.14)
project(wdi)

set(CMAKE_CXX_STANDARD 14)

add_executable(1.1 zestaw1/1.cpp)
add_executable(1.2 zestaw1/2.cpp)
add_executable(1.3 zestaw1/3.cpp)
add_executable(1.4 zestaw1/4.cpp)
add_executable(1.5 zestaw1/5.cpp)
add_executable(1.6 zestaw1/6.cpp)

add_executable(2.1 zestaw2/1.cpp)
add_executable(2.2 zestaw2/2.cpp)
add_executable(2.3 zestaw2/3.cpp)
add_executable(2.4 zestaw2/4.cpp)
add_executable(2.5 zestaw2/5.cpp)
add_executable(2.6 zestaw2/6.cpp)
add_executable(2.7 zestaw2/7.cpp)
add_executable(2.8 zestaw2/8.cpp)
add_executable(2.9 zestaw2/9.cpp)

add_executable(3.1 zestaw3/1.cpp)
add_executable(3.2 zestaw3/2.cpp)
add_executable(3.3 zestaw3/3.cpp)
add_executable(3.4 zestaw3/4.cpp)
add_executable(3.5 zestaw3/5.cpp)
add_executable(3.6 zestaw3/6.cpp)

add_executable(4.1 zestaw4/1.cpp)

add_executable(5.1 zestaw5/1.cpp)
add_executable(5.2 zestaw5/2.cpp)
add_executable(5.3 zestaw5/3.cpp)
add_executable(5.4 zestaw5/4.cpp)
add_executable(5.5 zestaw5/5.cpp)